2008-11-11	Jannis Pohlmann <jannis@xfce.org>

	* == 4.5.92 released ==
	* configure.in.in: Bump version and update dependencies.
	* NEWS: Update NEWS file.

2008-10-29	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/libxfce4menu-config.h.in,
	  libxfce4menu/xfce-menu-item.c: Fix copyright header.

2008-10-14	Stephan Arts <stephan@xfce.org>

	* NEWS: Updated for the beta1 release.

2008-09-12	Jannis Pohlmann <jannis@xfce.org>

	* NEWS, TODO: Updated for the alpha release.

2008-09-07	Stephan Arts <stephan@xfce.org>

	* configure.in.in: Bump libxfce4util dependency to 4.5.90, so people
	  won't use it with earlier versions. Remove -svn tag.

2008-09-02	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-item-cache.c: Properly release the mutex at
	  the end of xfce_menu_item_cache_foreach(). Calling g_mutex_lock()
	  won't unlock the mutex ...

2008-08-31	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-item.{c,h}: Add
	  xfce_menu_item_only_show_in_environment() function which checks
	  whether the current environment is present in the OnlyShowIn key of
	  a menu item. This should close bug #3741.

2008-08-31	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Don't print errors when trying to detect the
	  revision of a git svn repository.

2008-08-17	Brian Tarricone <bjt23@cornell.edu>

	* configure.in.in: Set LIBXFCE4MENU_VERSION_API independently
	  of the package version.
	* docs/reference/Makefile.am: use the correct API version when
	  linking with the library

2008-07-15	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Change @REVISION@ substitution for git svn
	  repositories again.

2008-07-10	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Fix @REVISION@ substitution when using git svn.

2008-07-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu.c: Add #if 0 around 
	  xfce_menu_resolve_legacy_menus() and 
	  xfce_menu_resolve_legacy_menu(). Avoids build errors on some
	  systems.
